--- a/css/index.css
+++ b/css/index.css
@@ -396,7 +396,8 @@ body {
 }
 
 .category {
-    /* cursor: pointer; */
+    opacity: 0.7;
+    color: aliceblue;
 }
 
 #categoryRange {
@@ -576,9 +577,9 @@ body {
     width: 70%;
     /* height: 40vh; */
     text-align: center;
-    /* background-color: #fefefe; */
-    /* background-image: url("https://images.unsplash.com/photo-1504350440606-81847d413a13?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9"); */
-    background-image: url("https://s3.envato.com/files/221129430/usa-flag-america.jpg");
+    background-color: #fefefe;
+    background-image: url("https://images.unsplash.com/photo-1504350440606-81847d413a13?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9");
+    /* background-image: url("https://s3.envato.com/files/221129430/usa-flag-america.jpg"); */
     /* background-image: url("http://www.myfreetextures.com/wp-content/uploads/2011/06/another-rough-old-and-worn-parchment-paper.jpg"); */
     background-position: center;
     background-repeat: no-repeat;
@@ -669,6 +670,7 @@ body {
 }
 
 .slider {
+  opacity: 0.7;
   position: absolute;
   cursor: pointer;
   top: 0;
