--- a/css/index.css
+++ b/css/index.css
@@ -796,6 +796,7 @@ input:checked + .slider:before {
 } */
 
 .switch {
+  opacity: 0.7; 
   position: relative;
   display: inline-block;
   width: 125px;
@@ -855,7 +856,6 @@ input:checked + .slider:before {
  top: 50%;
  left: 50%;
  font-size: 12px;
- font-weight: bold;
  font-family: monospace;
 }
 
