--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,8 @@ body {
     color: aliceblue;
     text-shadow: 4px 4px 8px black;
     display: flex;
-    justify-content: center;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .header-left {
@@ -529,6 +530,57 @@ body {
   to {left: 15px;}
 }
 
+/* .title-pointer {
+    position: relative;
+    opacity: 0.7;
+    bottom: 5px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    background: none;
+    outline: none;
+    transform: rotate(135deg);
+    z-index: 1;
+    height: 10px;
+    width: 10px;
+    border-color: aliceblue;
+    animation: left-title-bounce 1.5s infinite;
+}
+
+.left-title-pointer {
+    position: relative;
+    opacity: 0.7;
+    bottom: 5px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    background: none;
+    outline: none;
+    transform: rotate(-45deg);
+    z-index: 1;
+    height: 10px;
+    width: 10px;
+    border-color: aliceblue;
+    animation: title-bounce 1.5s infinite;
+}
+
+.compare-button {
+    position: absolute;
+    left: 200px;
+}
+
+@keyframes title-bounce {
+  from {right: 5px;}
+  to {right: 15px;}
+}
+
+@keyframes left-title-bounce {
+  from {left: 5px;}
+  to {left: 15px;}
+} */
+
 /* The Modal (background) */
 
 #myBtn {
@@ -563,7 +615,7 @@ body {
 .modal-content {
     position: fixed;
     left: 14.5%;
-    bottom: 38.7%;
+    bottom: 22.7%;
     width: 70%;
     /* height: 40vh; */
     text-align: center;
@@ -579,7 +631,8 @@ body {
     animation-name: slideIn;
     animation-duration: 0.4s;
     color: white;
-    text-shadow: 1px 1px 8px black;
+    font-size: 24px;
+    text-shadow: 1px 1px 3px black;
 }
 
 /* The Close Button */
@@ -616,12 +669,12 @@ body {
 /* Add Animation */
 @-webkit-keyframes slideIn {
     from {bottom: -300px; opacity: 0} 
-    to {bottom: 38.7%; opacity: 1}
+    to {bottom: 22.7%; opacity: 1}
 }
 
 @keyframes slideIn {
     from {bottom: -300px; opacity: 0}
-    to {bottom: 38.7%; opacity: 1}
+    to {bottom: 22.7%; opacity: 1}
 }
 
 @-webkit-keyframes fadeIn {
