--- a/css/index.css
+++ b/css/index.css
@@ -713,7 +713,6 @@ body {
 }
 
 input[type=range] {
-  /* overflow: hidden; */
   -webkit-appearance: none;
   width: 100%;
   margin: 12.8px 0;
@@ -741,11 +740,10 @@ input[type=range]::-webkit-slider-thumb {
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -13px;
-  /* box-shadow: -0px -40px 0 80px #43e5f7; */
 }
-/* input[type=range]:focus::-webkit-slider-runnable-track-upper {
+input[type=range]:focus::-webkit-slider-runnable-track {
   background: #008ded;
-} */
+}
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.4px;
@@ -773,7 +771,7 @@ input[type=range]::-ms-track {
   color: transparent;
 }
 input[type=range]::-ms-fill-lower {
-  background: #898e92;
+  background: #008ded;
   border: 0.2px solid #010101;
   border-radius: 2.6px;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
@@ -795,7 +793,7 @@ input[type=range]::-ms-thumb {
   height: 8.4px;
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #898e92;
+  background: #008ded;
 }
 input[type=range]:focus::-ms-fill-upper {
   background: #008ded;
