--- a/css/index.css
+++ b/css/index.css
@@ -741,9 +741,9 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   margin-top: -13px;
 }
-input[type=range]:focus::-webkit-slider-runnable-track {
+/* input[type=range]:focus::-webkit-slider-runnable-track {
   background: #008ded;
-}
+} */
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.4px;
@@ -792,12 +792,12 @@ input[type=range]::-ms-thumb {
   cursor: pointer;
   height: 8.4px;
 }
-input[type=range]:focus::-ms-fill-lower {
+/* input[type=range]:focus::-ms-fill-lower {
   background: #008ded;
 }
 input[type=range]:focus::-ms-fill-upper {
   background: #008ded;
-}
+} */
 
 .switch {
   opacity: 0.7; 
