--- a/css/index.css
+++ b/css/index.css
@@ -657,7 +657,7 @@ body {
     animation-name: slideIn;
     animation-duration: 0.4s;
     color: floralwhite;
-    font-size: 24px;
+    font-size: 2.5vh;
     /* text-shadow: 1px 1px 3px black; */
     /* -webkit-text-stroke: 1px black; */
     font-weight: bold;
